B-F Sandbox Full-Backup/src/objects/Transfer_Order_Item__c.object
<CustomObject>
    <description>A transfer order item is a position of a transfer order</description>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Transfer Order Items</relationshipLabel>
        <relationshipName>Transfer_Order_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity_Ordered__c</fullName>
        <label>Quantity Ordered</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transfer_Order__c</fullName>
        <inlineHelpText>The transfer order the item belongs to</inlineHelpText>
        <label>Transfer Order</label>
        <referenceTo>Transfer_Order__c</referenceTo>
        <relationshipLabel>Transfer Order Items</relationshipLabel>
        <relationshipName>Transfer_Order_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Transfer Order Item</label>
    <nameField>
        <displayFormat>TOI-{YYYYMM}-{00000}</displayFormat>
        <label>Transfer Order Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transfer Order Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>